<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ProtectRelay_Standard" Id="{21145ecb-be35-4299-99aa-74fb00c02be0}">
    <Declaration><![CDATA[///////////
// Structure For I35. Main Operating Data to be saved (ex: OPC).  
//////////
TYPE ProtectRelay_Standard :
STRUCT
	MesData			: ProtectRelay ; 
		
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>